--- a/src/App.css
+++ b/src/App.css
@@ -115,3 +115,27 @@
    height: 0; 
    clear: both;
 }
+
+
+
+input[type=text] {
+  width: 130px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  position: fixed;
+  top: 3%;
+  left: 34%;
+  font-size: 16px;
+  background-color: white;
+  background-image: url(http://www.w3schools.com/howto/searchicon.png);
+  background-position: 10px 10px;
+  background-repeat: no-repeat;
+  padding: 12px 20px 12px 40px;
+  -webkit-transition: width 0.4s ease-in-out;
+  transition: width 0.4s ease-in-out;
+}
+
+input[type=text]:focus {
+  width: 50%;
+}
